# Aletheia-Capital

./: .env.example  .gitignore  BACKTESTING_AND_WEIGHTS.md  BROKERAGE_ANALYSIS.md  CLOUD_SCALING_ANALYSIS.md  DRY_RUN_ANALYSIS.md  EMAIL_SETUP.md  IMPLEMENTATION_STATUS.md  QUICK_START_OLLAMA.md  README.md  READY_TO_USE.md  SETUP.md  TEST_RESULTS.md  TEST_SUMMARY.md  UNIVERSE_TRADING.md  biotech_catalyst_scan.py  commodities_scan.py  congressional_scan.py  crypto_weekly_scan.py  daily_health_check.py  forex_scan.py  fund_weekly_digest.py  futures_scan.py  hedge_scan.py  install_ollama.sh  macro_etf_scan.py  options_income_scan.py  preflight.py  pyproject.toml  run.sh  setup.sh  weekly_scan_rebalancing.py
config/: agent_weights.json  agents_tiers.json  biotech_discovery_blocklist.txt  biotech_learning_blocklist.txt  biotech_policy.json  biotech_watchlist.txt  fund_allocation.json  run_profiles.json  sleeve_budgets.json  ticker_sectors.json  workflow_accounts.yaml
docs/: AGENT_DATA_GAPS.md  AGENT_TIERS.md  AGENT_V2.md  API.md  API_KEYS.md  ARCHITECTURE.md  BEAT_SPY_PLAN.md  BIOTECH_THESIS.md  DATA_SOURCES.md  DEPLOYMENT.md  DISASTER_RECOVERY.md  ENHANCEMENTS.md  EXECUTION.md  FULL_UNIVERSE_DATA_COST.md  GETTING_STARTED.md  PHASE13.md  PHASE14_IMPLEMENTATION.md  README.md  ROADMAP.md  RUN_PROFILES.md  SCALING.md  SCAN_CACHE.md  WEEKLY_RUN.md  WORKFLOW_ACCOUNTS.md
scripts/: biotech_backtest.py  biotech_policy_eval.py  calibration_eval.py  incident_bundle.py  operator_cockpit.py  ops_orchestrator.py  pipeline_smoke_check.py  research_discrepancy_report.py  run_weekly_scan.sh  (+2 more)
(+277 files in other folders)
